force-app/main/default/objects/Solution_Option__c/Solution_Option__c.object-meta.xml
<CustomObject>
    <label>Solution Option</label>
    <nameField>
        <label>Solution Short Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>