force-app/main/default/objects/Solution_Option__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this solution is application specific, link it here.</description>
    <inlineHelpText>If this solution is application specific, link it here.</inlineHelpText>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Solution Options</relationshipLabel>
    <relationshipName>Solution_Options</relationshipName>
    <type>Lookup</type>
</CustomField>