force-app/main/default/objects/Solution_Option__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Solution Options</relationshipLabel>
    <relationshipName>Solution_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>