force-app/main/default/objects/Solution_Option__c/fields/Solution_Details__c.field-meta.xml
<CustomField>
    <fullName>Solution_Details__c</fullName>
    <label>Solution Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>