force-app/main/default/objects/Solution_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requirement__c</columns>
    <columns>Application__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>